--- a/components/styles/MapTile.module.css
+++ b/components/styles/MapTile.module.css
@@ -1,8 +1,22 @@
-.Hex {
+.BackgroundImage {
   position: relative;
   border: 0.05vmin solid rgb(223, 61, 61);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
   background-color: black;
   aspect-ratio: 1;
   width: 100px;
   height: 100px;
+}
+
+.PlayerImage {
+  position: absolute;
+  transform: rotate(35deg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+  pointer-events: none; /* Ensure clicks pass through to the parent */
 }
