--- a/components/styles/ModalLeftTopHandling.module.css
+++ b/components/styles/ModalLeftTopHandling.module.css
@@ -7,9 +7,16 @@
   top: 1.5rem; /* Adjust as needed */
   left: 1.5rem; /* Adjust as needed */
   z-index: 60;
-  box-shadow:
-    0 4px 6px -1px rgba(0, 0, 0, 0.1),
-    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  transition: background-color 0.3s ease;
+  cursor: pointer;
+  border: none;
+  border-radius: 50%;
+  background-color: #9e0d0d83;
+  padding: 10px;
+}
+
+.button:hover {
+  background-color: #9e0f0f;
 }
 
 .panel {
