--- a/components/styles/MapTile.module.css
+++ b/components/styles/MapTile.module.css
@@ -20,3 +20,24 @@
   height: 100%;
   pointer-events: none; /* Ensure clicks pass through to the parent */
 }
+
+.CitiesImage {
+  position: absolute;
+  transform: rotate(40deg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+  pointer-events: none; /* Ensure clicks pass through to the parent */
+}
+
+.DistrictsImage {
+  position: absolute;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+  pointer-events: none; /* Ensure clicks pass through to the parent */
+}
