--- a/components/styles/Tile.module.css
+++ b/components/styles/Tile.module.css
@@ -41,3 +41,14 @@
   height: 100%;
   pointer-events: none; /* Ensure clicks pass through to the parent */
 }
+
+.BuildingsImage {
+  position: absolute;
+  transform: rotate(40deg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+  pointer-events: none; /* Ensure clicks pass through to the parent */
+}
