--- a/plop-templates/dbGetTable.hbs
+++ b/plop-templates/dbGetTable.hbs
@@ -1,6 +1,15 @@
 // GENERATED CODE - DO NOT EDIT MANUALLY - dbGetTable.hbs
+
 "use server"
 import { query } from "@/db/postgresMainDatabase/postgresMainDatabase"
+
+{{#if paramsFields.length}}
+export type {{typeName}}Params = {
+{{#each paramsFields}}
+  {{name}}: {{tsType}}
+{{/each}}
+}
+{{/if}}
 
 export type {{typeName}} = {
 {{#each fields}}
@@ -8,25 +17,21 @@ export type {{typeName}} = {
 {{/each}}
 }
 
-export type {{whereTypeName}} = {
-{{#each whereFields}}
-  {{name}}{{optional}}: {{tsType}}
-{{/each}}
-}
 
-export async function get{{methodName}}(where: {{whereTypeName}}) { 
+export async function get{{methodName}}({{#if paramsFields.length}}{{paramsList}}: TParams{{/if}}) {
   try {
-    const whereClauses = Object.keys(where)
-      .map((key) => key + " = $" + (Object.keys(where).indexOf(key) + 1))
-      .join(" AND ")
+    {{#if paramsFields.length}}
+    const sqlParams = [{{paramsList}}]
+    const whereClauses = [{{#each paramsFields}}"{{name}} = $" + ({{@index}} + 1){{#unless @last}}, {{/unless}}{{/each}}]
+    const sql = `SELECT * FROM {{schema}}.{{table}} WHERE ${whereClauses.join(" AND ")}`
+    {{else}}
+    const sql = `SELECT * FROM {{schema}}.{{table}}`
+    const sqlParams: any[] = []
+    {{/if}}
 
-    const params = Object.values(where)
-
-    const sql = `SELECT * FROM {{schema}}.{{table}}${whereClauses ? " WHERE " + whereClauses : ""}`
-
-    const result = await query(sql, params)
-
+    const result = await query(sql, sqlParams)
     return result.rows as {{typeName}}[]
+
   } catch (error) {
     console.error("Error fetching get{{methodName}}:", error)
     throw new Error("Failed to fetch get{{methodName}}")
