--- a/plop-templates/dbGetProcedure.hbs
+++ b/plop-templates/dbGetProcedure.hbs
@@ -1,3 +1,5 @@
+// GENERATED CODE - DO NOT EDIT MANUALLY - dbGetProcedure.hbs
+
 "use server"
 import { query } from "@/db/postgresMainDatabase/postgresMainDatabase"
 
