--- a/plop-templates/apiGetTable.hbs
+++ b/plop-templates/apiGetTable.hbs
@@ -1,4 +1,6 @@
+// GENERATED CODE - DO NOT EDIT MANUALLY - apiGetTable.hbs
 /* eslint-disable @typescript-eslint/no-unused-vars */
+
 import { auth } from "@/auth"
 import { get{{methodName}} } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{table}}"
 import crypto from "crypto"
