--- a/plop-templates/apiGetTable.hbs
+++ b/plop-templates/apiGetTable.hbs
@@ -2,7 +2,7 @@
 /* eslint-disable @typescript-eslint/no-unused-vars */
 
 import { auth } from "@/auth"
-import { get{{methodName}} } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{table}}"
+import { get{{methodName}},{{#if paramsFields}}{{typeName}}Params,{{/if}}{{typeName}}} from "@/db/postgresMainDatabase/schemas/{{schema}}/{{table}}"
 import crypto from "crypto"
 import { NextRequest, NextResponse } from "next/server"
 import z from "zod"
@@ -13,13 +13,11 @@ const typeParamsSchema = z.object({
   {{#each paramsFields}}
   {{name}}: z.coerce.{{tsType}}(),
   {{/each}}
-})
-
-type TypeParams = z.infer<typeof typeParamsSchema>
+}) satisfies z.ZodType<{{typeName}}Params>
 {{/if}}
 
 
-export async function GET(request: NextRequest{{#if paramsFields}}, { params }: { params: TypeParams }{{/if}}): Promise<NextResponse> {
+export async function GET(request: NextRequest{{#if paramsFields}}, { params }: { params: {{typeName}}Params }{{/if}}): Promise<NextResponse> {
   
   const session = await auth()
   const sessionPlayerId = session?.user?.playerId
@@ -29,7 +27,7 @@ export async function GET(request: NextRequest{{#if paramsFields}}, { params }: 
   
   {{#if paramsFields}}
   const paramsFromPromise = await params
-  const parsedParams: TypeParams = typeParamsSchema.parse(paramsFromPromise)
+  const parsedParams = typeParamsSchema.parse(paramsFromPromise)
   {{/if}}
 
   try {
