--- a/plop-templates/hookGetTable.hbs
+++ b/plop-templates/hookGetTable.hbs
@@ -22,7 +22,7 @@ export function useFetch{{tablePascalName}}() {
       set{{tablePascalName}}(index)
       prevDataRef.current = data
     }
-  }, [data])
+  }, [data], set{{tablePascalName}})
 
   return { {{table}} }
 }
