--- a/plop-templates/dbGetProcedure.hbs
+++ b/plop-templates/dbGetProcedure.hbs
@@ -3,23 +3,18 @@
 "use server"
 import { query } from "@/db/postgresMainDatabase/postgresMainDatabase"
 
-{{tsReturnType}}
+{{{tsReturnType}}}
 
-export async function {{procedurePascalName}}({{tsArgsList}}) {
+export async function {{procedureCamelName}}({{tsArgsList}}) {
   try {
     const result = await query(
-      `
-      CALL {{schema}}.{{procedure}}(
-        {{#each argsArray}}
-        ${{@indexPlusOne}}{{#unless @last}},{{/unless}}
-        {{/each}}
-      );`,
-      {{argsArray}}
+      `CALL {{schema}}.{{procedure}}({{sqlParamsPlaceholders}});`,
+      [{{argsArray}}]
     )
 
     return result.rows as T{{procedurePascalName}}Result[]
   } catch (error) {
-    console.error("Error executing {{procedure}}:", error)
-    throw new Error("Failed to execute {{procedure}}")
+    console.error("Error executing {{procedureCamelName}}:", error)
+    throw new Error("Failed to execute {{procedureCamelName}}")
   }
 }
