--- a/plop-templates/hookGetTableServer.hbs
+++ b/plop-templates/hookGetTableServer.hbs
@@ -1,4 +1,4 @@
-// GENERATED CODE - DO NOT EDIT MANUALLY - fetch{{tablePascalName}}Server.hbs
+// GENERATED CODE - DO NOT EDIT MANUALLY - hookGetTableServer.hbs
 
 import { {{typeName}}RecordBy{{typeRecordName}} } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{table}}"
 import { {{indexMethodName}} } from "@/methods/functions/converters"
