--- a/plop-templates/hookGetFunctionServer.hbs
+++ b/plop-templates/hookGetFunctionServer.hbs
@@ -1,4 +1,4 @@
-// GENERATED CODE - DO NOT EDIT MANUALLY - fetchServerGetFunction.hbs
+// GENERATED CODE - DO NOT EDIT MANUALLY - hookGetFunctionServer.hbs
 "use server"
 
 import { get{{methodPascalName}} } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{methodCamelName}}"
