--- a/plop-templates/hookGetTableServer.hbs
+++ b/plop-templates/hookGetTableServer.hbs
@@ -1,5 +1,5 @@
 // GENERATED CODE - DO NOT EDIT MANUALLY - hookGetTableServer.hbs
-
+"use server"
 import { {{typeName}}RecordBy{{typeRecordName}} } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{table}}"
 import { {{indexMethodName}} } from "@/methods/functions/converters"
 import { get{{tablePascalName}} } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{table}}"
