--- a/plop-templates/hookGetTableServer.hbs
+++ b/plop-templates/hookGetTableServer.hbs
@@ -4,12 +4,12 @@ import { {{typeName}}RecordBy{{typeRecordName}} } from "@/db/postgresMainDatabas
 import { {{indexMethodName}} } from "@/methods/functions/converters"
 import { get{{tablePascalName}} } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{table}}"
 
-export async function fetch{{tablePascalName}}Server(): Promise<{{typeName}}RecordBy{{typeRecordName}}> {
-  const {{table}}Data = await get{{tablePascalName}}()
+export async function get{{methodName}}Server(): Promise<{{typeName}}RecordBy{{typeRecordName}}> {
+  const get{{methodName}}Data = await get{{methodName}}({{#if paramsFields}}parsedParams{{/if}})
 
-  const index = {{table}}Data
+  const data = get{{methodName}}Data
     ? ({{{indexMethodName}}}({{{indexMethodArgs}}}, {{table}}Data) as {{typeName}}RecordBy{{typeRecordName}})
     : {}
 
-  return index
+  return data
 }
