--- a/plop-templates/hookGetTableServer.hbs
+++ b/plop-templates/hookGetTableServer.hbs
@@ -1,11 +1,16 @@
 // GENERATED CODE - DO NOT EDIT MANUALLY - hookGetTableServer.hbs
 "use server"
 
-import { {{typeName}}RecordBy{{typeRecordName}} } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{table}}"
 import { {{indexMethodName}} } from "@/methods/functions/converters"
-import { get{{tablePascalName}} } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{table}}"
+import { get{{methodName}} } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{table}}"
+{{#if (eq indexMethodName "arrayToObjectKeysId")}}
+import type {{typeName}}RecordBy{{typeRecordName}} from "@/db/postgresMainDatabase/schemas/{{schema}}/{{table}}"
+{{else}}
+import type {{typeName}}RecordBy{{typeRecordName}} from "@/db/postgresMainDatabase/schemas/{{schema}}/{{table}}"
+{{/if}}
 
-export async function get{{methodName}}Server(): Promise<{{typeName}}RecordBy{{typeRecordName}}> {
+
+export async function get{{methodName}}Server({{#if paramsFields}}parsedParams{{/if}}): Promise<{{typeName}}RecordBy{{typeRecordName}}> {
   const get{{methodName}}Data = await get{{methodName}}({{#if paramsFields}}parsedParams{{/if}})
 
   const data = get{{methodName}}Data
