--- a/plop-templates/hookGetTableServer.hbs
+++ b/plop-templates/hookGetTableServer.hbs
@@ -2,12 +2,12 @@
 "use server"
 
 import { {{indexMethodName}} } from "@/methods/functions/converters"
-import { get{{methodName}} } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{tablePascalName}}"
-{{#if paramsFields}}import { {{typeName}}Params } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{tablePascalName}}"{{/if}}
+import { get{{methodName}} } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{tableCamelName}}"
+{{#if paramsFields}}import { {{typeName}}Params } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{tableCamelName}}"{{/if}}
 {{#if (eq indexMethodName "arrayToObjectKeysId")}}
-import type { {{typeName}}RecordBy{{typeRecordName}} } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{tablePascalName}}"
+import type { {{typeName}}RecordBy{{typeRecordName}} } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{tableCamelName}}"
 {{else}}
-import type { {{typeName}}RecordBy{{typeRecordName}} } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{tablePascalName}}"
+import type { {{typeName}}RecordBy{{typeRecordName}} } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{tableCamelName}}"
 {{/if}}
 
 
