--- a/plop-templates/dbGetFunction.hbs
+++ b/plop-templates/dbGetFunction.hbs
@@ -31,7 +31,7 @@ export async function get{{methodPascalName}}(params: T{{methodPascalName}}Param
     const result = await query(sql, sqlParams)
     return result.rows as T{{methodPascalName}}[]
   } catch (error) {
-    console.error("Error executing get{{methodPascalName}}:", error)
-    throw new Error("Failed to execute get{{methodPascalName}}")
+    console.error("Error fetching get{{methodPascalName}}:", error)
+    throw new Error("Failed to fetch get{{methodPascalName}}")
   }
 }
