--- a/plop-templates/dbGetTable.hbs
+++ b/plop-templates/dbGetTable.hbs
@@ -3,29 +3,29 @@
 "use server"
 import { query } from "@/db/postgresMainDatabase/postgresMainDatabase"
 
-{{#if paramsFields}}
-export type {{typeName}}Params = {
-{{#each paramsFields}}
+{{#if methodParamsColumns}}
+export type {{methodParamsTypeName}} = {
+{{#each methodParamsColumns}}
   {{camelName}}: {{tsType}}
 {{/each}}
 }
 {{/if}}
 
-export type {{typeName}} = {
-{{#each fields}}
+export type {{methodTypeName}} = {
+{{#each methodColumns}}
   {{camelName}}{{optional}}: {{tsType}}
 {{/each}}
 }
 
 
 {{#if (eq indexMethodName "arrayToObjectKeysId")}}
-export type {{typeName}}RecordBy{{typeRecordName}} = Record<string, {{typeName}}>
+export type {{indexTypeName}} = Record<string, {{methodTypeName}}>
 {{else}}
-export type {{typeName}}RecordBy{{typeRecordName}} = Record<number, {{typeName}}> 
+export type {{indexTypeName}} = Record<number, {{methodTypeName}}> 
 {{/if}}
 
 
-export async function get{{methodName}}({{#if paramsFields}}params: {{typeName}}Params{{/if}}) {
+export async function {{methodName}}({{#if methodParamsColumns}}params:{{methodParamsTypeName}}{{/if}}) {
   try {
     const camelToSnake = (str: string) => str.replace(/[A-Z]/g, letter => `_${letter.toLowerCase()}`)
 
@@ -35,11 +35,11 @@ export async function get{{methodName}}({{#if paramsFields}}params: {{typeName}}
 
 
     const result = await query(sql, sqlParams)
-    return result.rows as {{typeName}}[]
+    return result.rows as {{methodTypeName}}[]
 
 
   } catch (error) {
-    console.error("Error fetching get{{methodName}}:", error)
-    throw new Error("Failed to fetch get{{methodName}}")
+    console.error("Error fetching {{methodName}}:", error)
+    throw new Error("Failed to fetch {{methodName}}")
   }
 }
